--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#FFFFFF" />
-    <meta name="msapplication-TileColor" content="#FFFFFF">
-    <meta name="msapplication-TileImage" content="favicon-144.png">
-    <meta name="application-name" content="Chabloom Accounts">
-    <meta name="msapplication-tooltip" content="Tooltip">
-    <meta name="msapplication-config" content="/path/to/ieconfig.xml">
-    <link rel="apple-touch-icon-precomposed" href="favicon-180.png">
-    <link rel="shortcut icon" sizes="196x196" href="favicon-196.png">
-    <link rel="icon" href="favicon-16.png" sizes="16x16">
-    <link rel="icon" href="favicon-24.png" sizes="24x24">
-    <link rel="icon" href="favicon-32.png" sizes="32x32">
-    <link rel="icon" href="favicon-48.png" sizes="48x48">
-    <link rel="icon" href="favicon-57.png" sizes="57x57">
-    <link rel="icon" href="favicon-64.png" sizes="64x64">
-    <link rel="icon" href="favicon-76.png" sizes="76x76">
-    <link rel="icon" href="favicon-96.png" sizes="96x96">
-    <link rel="icon" href="favicon-120.png" sizes="120x120">
-    <link rel="icon" href="favicon-128.png" sizes="128x128">
-    <link rel="icon" href="favicon-144.png" sizes="144x144">
-    <link rel="icon" href="favicon-152.png" sizes="152x152">
-    <link rel="icon" href="favicon-180.png" sizes="180x180">
-    <link rel="icon" href="favicon-195.png" sizes="195x195">
-    <link rel="icon" href="favicon-196.png" sizes="196x196">
-    <link rel="icon" href="favicon-228.png" sizes="228x228">
-    <link rel="manifest" href="manifest.json" />
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta content="#FFFFFF" name="theme-color"/>
+    <meta content="#FFFFFF" name="msapplication-TileColor">
+    <meta content="favicon-144.png" name="msapplication-TileImage">
+    <meta content="Chabloom Accounts" name="application-name">
+    <meta content="Tooltip" name="msapplication-tooltip">
+    <meta content="/path/to/ieconfig.xml" name="msapplication-config">
+    <link href="favicon-180.png" rel="apple-touch-icon-precomposed">
+    <link href="favicon-196.png" rel="shortcut icon" sizes="196x196">
+    <link href="favicon-16.png" rel="icon" sizes="16x16">
+    <link href="favicon-24.png" rel="icon" sizes="24x24">
+    <link href="favicon-32.png" rel="icon" sizes="32x32">
+    <link href="favicon-48.png" rel="icon" sizes="48x48">
+    <link href="favicon-57.png" rel="icon" sizes="57x57">
+    <link href="favicon-64.png" rel="icon" sizes="64x64">
+    <link href="favicon-76.png" rel="icon" sizes="76x76">
+    <link href="favicon-96.png" rel="icon" sizes="96x96">
+    <link href="favicon-120.png" rel="icon" sizes="120x120">
+    <link href="favicon-128.png" rel="icon" sizes="128x128">
+    <link href="favicon-144.png" rel="icon" sizes="144x144">
+    <link href="favicon-152.png" rel="icon" sizes="152x152">
+    <link href="favicon-180.png" rel="icon" sizes="180x180">
+    <link href="favicon-195.png" rel="icon" sizes="195x195">
+    <link href="favicon-196.png" rel="icon" sizes="196x196">
+    <link href="favicon-228.png" rel="icon" sizes="228x228">
+    <link href="manifest.json" rel="manifest"/>
     <title>Chabloom Accounts</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
