--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="#FFFFFF" name="theme-color" />
+    <meta content="#0064C8" name="theme-color" />
     <meta content="#FFFFFF" name="msapplication-TileColor" />
     <meta content="favicon-144.png" name="msapplication-TileImage" />
     <meta content="Chabloom Accounts" name="application-name" />
@@ -28,10 +28,7 @@
     <link href="favicon-196.png" rel="icon" sizes="196x196" />
     <link href="favicon-228.png" rel="icon" sizes="228x228" />
     <link href="manifest.json" rel="manifest" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>Chabloom Accounts</title>
   </head>
   <body>
